- Add login with facebook - Some refactor